samples/_failures_safe/1761666000_0f2ab1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da660624.c: In function ‘main’:
./samples/SAFE/__tmp_da660624.c:148:9: error: expected declaration or statement at end of input
  148 |         int choice;
      |         ^~~
./samples/SAFE/__tmp_da660624.c:148:9: error: expected declaration or statement at end of input
